# autoparts

./: .gitignore  README.md  alembic.ini  anotations.txt  migracoes.txt  pyproject.toml  queries.sql
alembic/: env.py
alembic/versions/: 72a6fdc8f61a_removendo_campo_name_e_adicionando_.py  87cb382ff587_testando_alembic.py
autoparts/: auth.py  crud.py  database.py  dev_services.py  gets.py  main.py  models.py  schemas.py  services.py  utils.py
